# gammatagging

./: CMakeLists.txt  README.md  gammatagging.fcl  gammatagging.h  gammatagging_module.cc
func/: CMakeLists.txt  classes.h  classes_def.xml
